# blended-django-31-03

./: README.md  docker-compose.yaml  pyproject.toml
cinema/: settings.py  urls.py
cinema_app/: admin.py  forms.py  models.py  urls.py  views.py
cinema_app/migrations/: 0001_initial.py
cinema_app/templates/cinema_app/: cinema.html  index.html  movie.html  screening.html
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html
