[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["Edward Litvinchuck <elitvinchuck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
